--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:locale" content="en_US" />
   </head>
   <body>
-    <div id="app"></div>
+    <main id="app"></main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
