--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
 
     <title>MBTI Compatibility</title>
 
+    <meta name="description" content="A service for analyzing MBTI personality compatibility in the form of a convenient list and interactive graph. Add people, select their personality types, and quickly assess the quality of relationships on a color scale — from poor to ideal" />
+
     <meta property="og:type" content="website" />
     <meta property="og:title" content="MBTI Compatibility" />
+    <meta property="og:description" content="A service for analyzing MBTI personality compatibility in the form of a convenient list and interactive graph. Add people, select their personality types, and quickly assess the quality of relationships on a color scale — from poor to ideal" />
     <meta property="og:url" content="https://mbti-compat.netlify.app" />
     <meta property="og:locale" content="en_US" />
+
+    <link rel="icon" href="./favicon.ico" sizes="32x32">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png">
   </head>
   <body>
     <main id="app"></main>
